fixed z-index of nav and footer

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -10,6 +10,7 @@
   bottom: 0;
   width: 100%;
   margin: 0 auto;
+  z-index: 9999;
 }
 .footer-links {
   display: flex;
